<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@android:color/background_dark"
        android:text="@string/title"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/buttonIzquierda" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="15dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/buttonDerecha" />

    <Button
        android:id="@+id/buttonAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/buttonAtras" />

    <Button
        android:id="@+id/buttonAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/buttonAdelante" />

    <Button
        android:id="@+id/buttonP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/holo_red_dark"
        android:text="@string/buttonDetener"
        android:textColor="@android:color/background_light" />
</RelativeLayout>
